@@ -370,7 +370,7 @@ webui.licence_bundle.show = false
 
 ##### Ingest settings #####
 
-# Default language for content of submissions
+# Default language for metadata values
 default.language = en_US
 
 
